--- a/source/step_2.org
+++ b/source/step_2.org
@@ -129,10 +129,27 @@ In a car, a circuit is needed to ensure that the airbags only deploy when there 
 - Wet the sponge under the tap, and wring it out, so it's damp but not dripping. 
 - Take a __Rectifier__ diode from the component trays, and look at it closely. Some components need to be inserted a certain way round, like this diode, which only allows electric current to flow through it in one direction.
 - The grey band on one end is like an arrow-head, indicating the direction of current-flow. There's also an arrow on the PCB between two of your holes. This is where the diode needs to go.
+[[./img/Component_and_board.png]]
+- You will need to bend the legs at 90 degrees to push it through the board.
+- Place your diode through the holes, so that the grey band points the same way as the arrow-head below the board.
+[[./img/component_in_board.png]]
+- You then need to turn the board over and then bend the component legs slightly over (30 to 45 degress) to stop it falling out when you solder it.
+- *DON'T LAY THE LEGS DOWN FLAT AGAINST THE BOARD.*
+[[./img/bentlegs.png]]
 - When soldering, the top of the board (the side with nothing on it) is called the "Component side", and is where all your components will sit when you're finished.
 - The side with all the shiny tracks and pads drawn on it is called the "Solder side", and is the side we apply solder to.
-- Place your diode through the holes, so that the grey band points the same way as the arrow-head, then bend the legs of the component out at about 45 degrees. This will stop the component from falling out fo the board when you solder it. 
-- DON'T LAY THE LEGS DOWN FLAT AGAINST THE BOARD.
+- First, place the soldering iron on the component leg and track, *the flat edge of the iron should be against the component leg.*
+[[./img/iron_on.png]]
+- The solder then needs to be introduced from the opposite side.
+[[./img/solder_on.png]]
+- Add a little solder to the joint until the solder seals the hole and is all the way around the component leg. Be careful not to put too much solder.
+- *You must always remove the solder wire before the soldering iron.*
+[[./img/soldered (1).png]]
+- You now need to use the side cutters to cut the excess wire off.
+[[./img/cutters.png]]
+- The finished joint should look like this.
+[[./img/chopped.png]]
+- Here is what the final soldered joints should look like.
 [[./img/diode1.jpg]] 
 - The aim of soldering is to join two metals together; in this case, the metal on the pad on the PCB and the component leg. To achieve this, both surfaces must be heated up for a few seconds, then solder can be melted which will flow on to both metals.
 - Here is a video of basic soldering skills. 
